--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_BACKEND=https://project-rof.vercel.app
+# VITE_BACKEND=https://project-rof.vercel.app
 
-# https://hubnex-backend-psi.vercel.app
+VITE_BACKEND =https://hubnex-backend-psi.vercel.app
