--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # VITE_BACKEND=https://project-rof.vercel.app
 
 VITE_BACKEND =https://hubnex-backend-psi.vercel.app
+# VITE_BACKEND =https://localhost:7060
