--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # VITE_BACKEND=https://project-rof.vercel.app
 
-# VITE_BACKEND =https://hubnex-backend-psi.vercel.app
+VITE_BACKEND =https://hubnex-backend-psi.vercel.app
 
-VITE_BACKEND=http://localhost:7060
+# VITE_BACKEND=http://localhost:7060
