--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 # VITE_BACKEND=https://project-rof.vercel.app
 
-VITE_BACKEND =https://hubnex-backend-psi.vercel.app
-# VITE_BACKEND =https://localhost:7060
+# VITE_BACKEND =https://hubnex-backend-psi.vercel.app
+
+VITE_BACKEND =https://rof-backend.vercel.app
+
+
+# VITE_BACKEND =http://localhost:7060
+
